syntax = "proto3";

package mozaic.events;

message ClientConnected {
    uint32 client_id = 1;
}

message ClientDisconnected {
    uint32 client_id = 1;
}