syntax = "proto3";

package mozaic.protocol;

message Packet {
    oneof payload {
        ConnectRequest connect_request = 1;
        ConnectResponse connect_response = 2;
        GameData data = 3;
        Disconnect disconnect = 4;
    }
}

message ConnectRequest {
    bytes token = 1;
}

message ConnectResponse {
    oneof response {
        Connected connected = 1;
        string error = 2;
    }
}

message Connected {}


message ClientMessage {
    oneof message {
        GameData game_data = 1;
        Disconnect disconnect = 3;
    }
}

message GameData {
    bytes data = 1;
}

message Disconnect {}